[project]
name = "stefan-python-arduino"
version = "0.1.0"
description = "Tutorial for Arduino"
authors = [
    {name = "Matej Kalc", email = "matejkalc99@protonmail.com"},
]
dependencies = [
    "pyfirmata>=1.1.0",
]
requires-python = "==3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
